--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
 <html>
 	<head>
 		<title>Kelsey Skaarva</title>
+		<!--Bootstrap-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
+		<!--My css file-->
+		<link rel="stylesheet" type="text/css" href="css/custom.css">
+
 	</head>
 	<body>
-		<h1>Welcome to my website</h1>
+		<div id="bannerPhoto"><img src="img/notMyEyes.png"/></div>
+
+		<!--Navbar-->
+		<div class="navbar navbar-default">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <!--span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span-->
+          </button>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">Portfolio</a></li>
+              <li><a href="#contact">Resume</a></li>
+              <li><a href="#contact">Hobbies</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+		<!--End Navbar-->
+
+		<h1>I'm Kelsey Skaarva!</h1>
+		<!--Bootstrap-->
+		<script src="http://code.jquery.com/jquery.js"></script>
+    	<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
