--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kelsey Skaarva</title>
-		<!--Bootstrap-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
-		<!--My css file-->
-		<link rel="stylesheet" type="text/css" href="css/custom.css">
-
+		<title>Kelsey's Website</title>
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/custom.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="bannerPhoto"><img src="img/notMyEyes.png"/></div>
 
-		<!--Navbar-->
-		<div class="navbar navbar-default">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <!--span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span-->
-          </button>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
+    <img src="img/notMyEyes.png"/>
+    <!--collapsible nav-->
+     <!-- Static navbar -->
+      <nav class="navbar navbar-default ">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Portfolio</a></li>
-              <li><a href="#contact">Resume</a></li>
-              <li><a href="#contact">Hobbies</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Resume</a></li>
+              <li><a href="#">Hobbies</a></li>
+              <li><a href="#">Contact Me</a></li>
             </ul>
           </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-		<!--End Navbar-->
+        </div><!--/.container-fluid -->
+      </nav>
 
-		<h1>I'm Kelsey Skaarva!</h1>
-		<!--Bootstrap-->
-		<script src="http://code.jquery.com/jquery.js"></script>
-    	<script src="js/bootstrap.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
