--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="portfolio.html">Portfolio</a></li>
               <li><a href="resume.html">Resume</a></li>
               <li><a href="hobbies.html">Hobbies</a></li>
               <li><a href="contactMe.html">Contact Me</a></li>
@@ -31,6 +31,8 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+
+      <h1>Welcome to my Portfolio</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
