--- a/contactMe.html
+++ b/contactMe.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kelsey Skaarva</title>
+		<title>Kelsey's Website</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 
-    <img src="img/notMyEyes.png"/>
+    <div id="bannerPhotoDiv"><img src="img/notMyEyes.png"/></div>
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
@@ -20,6 +20,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Contact Me</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -32,8 +33,6 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
-
-      <h1>Welcome to Contact Me</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
