Adding some content to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kelsey's Website</title>
+		<title>Kelsey Skaarva</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,6 +33,28 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+
+      <div id="leftColumn">
+        <h1>Hi I'm Kelsey Skaarva</h1>
+        <img src="img/ProfilePic.png" align="middle">
+      </div>
+      <div id="rightColumn"></div>
+
+<!--       <table>
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th> 
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td><h1>Hi I'm Kelsey Skaarva</h1></td>
+        </tr>
+        <tr>
+          <td id="profilePic"><img src="img/ProfilePic.png"></td>
+          <td><h2>Software developer turned UX designer</h2></td>
+        </tr>
+    </table> -->
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
