--- a/hobbies.html
+++ b/hobbies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kelsey's Website</title>
+		<title>Kelsey Skaarva</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
