index.html content added

--- a/index.html
+++ b/index.html
@@ -34,27 +34,18 @@
         </div><!--/.container-fluid -->
       </nav>
 
-      <div id="leftColumn">
-        <h1>Hi I'm Kelsey Skaarva</h1>
-        <img src="img/ProfilePic.png" align="middle">
-      </div>
-      <div id="rightColumn"></div>
-
-<!--       <table>
-        <tr>
-          <th>Firstname</th>
-          <th>Lastname</th> 
-          <th>Age</th>
-        </tr>
-        <tr>
-          <td><h1>Hi I'm Kelsey Skaarva</h1></td>
-        </tr>
-        <tr>
-          <td id="profilePic"><img src="img/ProfilePic.png"></td>
-          <td><h2>Software developer turned UX designer</h2></td>
-        </tr>
-    </table> -->
-
+      <section>
+        <div id="one">
+          <img id="profilePic" src="img/ProfilePic.png">
+        </div>
+        <div id="two">
+          <h1>Hi I'm Kelsey Skaarva</h1>
+          <h2 id="headline">Software developer turned UX designer</h2>
+          <h2 id="funHeader">Fun</h2>
+          <h2>Intelligent</h2>
+          <h2>Creative</h2>
+        </div>
+      </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
