--- a/resume.html
+++ b/resume.html
@@ -34,6 +34,102 @@
         </div><!--/.container-fluid -->
       </nav>
 
+      <center><h1>Kelsey Skaarva</h1></center>
+      <div id="contactInfo">
+        <center>
+          <h4>Brooklyn, NY 11211</h4>
+          <img class="starIcon" src="img/starIcon.png">
+          <h4>(917)-545-0979</h4> 
+          <img class="starIcon secondStar" src="img/starIcon.png">
+          <h4>KJS@KelseySkaarva.com</h4>
+        </center>
+      </div>
+
+      <div class="resumeContent">
+        <hr>
+        <div id="objective">
+          <h4><span class="colorTeal">OBJECTIVE</span>: Meld my existing knowledge of software development with my passion for design and find a challenging and exciting user experience design opportunity with a dynamic, forward thinking, and user focused company.</h4>
+        </div>
+
+        <div id="technicalCompetencies">
+          <h4><span class="colorTeal">TECHNICAL COMPETENCIES</span>: Sketch, Balsamiq, Adobe illustrator, Adobe photoshop, HTML, CSS, Javascript, C++, C#, WPF, Ruby on Rails, Ruby, Java, C, COBOL, Perforce, Git</h4>
+        </div>
+
+        <div class="sectionHeader">
+          <hr>
+          <h3 class="colorTeal sectionHeaderText"><strong>Work Experience</strong></h3>
+          <hr>
+        </div>
+
+        <div id="citi">
+          <h4 class="floatLeft colorTeal">Technical Analyst at Citi</h4>
+          <h4 class="floatRight"><strong>June 2015 - Present</strong></h4>
+          <h4 class="notInline">Worked on bug fixes and new feature adds for a C#/WPF application that displayed and manipulated trading data. Worked on a proof of concept to test the viability of html5 as a front end for my teams WPF application. Created a program to time various actions that we needed to happen quickly with a large data set. Learned more about design during work on a process improvement project. Got experience wire framing in Balsamiq, creating user personas, and performing usability tests. Planned several office events for networking and team building.</h4>
+        </div>
+
+        <div id="amazon">
+          <h4 class="floatLeft colorTeal">Software development engineer intern at Amazon</h4>
+          <h4 class="floatRight"><strong>Summer 2014</strong></h4>
+          <h4 class="notInline">Refactored an old Ruby on Rails site. Created methods to perform operations that were previously done manually. These methods read through a json file and used the data found to generate html forms dynamically. Used metaprogramming to create a class and attribute accessors using class eval. Created validation and unit tests for the methods I wrote. Faced the challenges of learning new languages (Ruby on Rails, Ruby, and Html) and new skills (web development, internal amazon technology, Git, working with a vast a foreign code base) in a short period of time but was able to come away with a successful completed project from front to backend. I also was able to experience working with teammates by engaging in code reviews, writing unit tests, refactoring my code, and providing status through standups and other team meetings.</h4>
+        </div>
+
+        <div class="sectionHeader" id="educationHeader">
+          <hr>
+          <h3 class="colorTeal sectionHeaderText"><strong>Education</strong></h3>
+          <hr>
+        </div>
+
+        <h4 class="floatLeft colorTeal">Binghamton University, State University of New York</h4>
+        <h4 class="floatLeft colorTeal notInline twoLineTitle">Bachelors of Science, Computer Science</h4>
+        <h4 class="floatRight twoLineTitle"><strong>May 2015</strong></h4>
+        <h4 class="floatLeft notInline twoLineTitle" id="cumulativeGPA">Cumulative GPA: 3.61/4.0</h4>
+        <h4 class="floatRight twoLineTitle"><strong>Major GPA: 3.55/4.0</strong></h4>
+        <h4 class="notInline">Dean's list 4/4 semesters, Women's club lacrosse, Black Student Union fashion show, Cultural Diversity Club Fashion Show, SnowCats (ski and snowboard club)</h4>
+        
+        <div id="GA">
+          <h4 class="floatLeft colorTeal" id="GATitle">General Assembly</h4>
+          <h4 class="floatRight"><strong>December 2015 - May 2015</strong></h4>
+          <h4 class="notInline">Global educational company focusing on the most relevant and in-demand skills across data, design, business and technology.</h4>
+        </div>
+
+        <div class="sectionHeader" id="educationHeader">
+          <hr>
+          <h3 class="colorTeal sectionHeaderText"><strong>Relevant Coursework</strong></h3>
+          <hr>
+        </div>
+
+        <h4 class="floatLeft colorTeal">User Experience Design Circuit, General Assembly</h4>
+        <h4 class="floatRight"><strong>April 2016- May 2016</strong></h4>
+        <h4 class="notInline">Worked through the user experience design process to design a functional clickable prototype. Each week learned a new UX skill and applied it to the class long project. These skills included discovery and user research, synthesizing research and developing a design strategy, placement and layout design, wire framing and prototyping, user testing, optimizing usability, and portfolio presentation. You can check out the finished project and design process in the portfolio tab.</h4>
+
+        <h4 class="floatLeft colorTeal">User Experience Design Bootcamp, General Assembly</h4>
+        <h4 class="floatRight"><strong>December 2015</strong></h4>
+        <h4 class="notInline" id="GADescription">A 1 day 7 hour course which went over a broad spectrum of user experience design principles including</h4>
+
+        <ul id="GAList">
+          <li><h4>Modern web UI design</h4></li>
+          <li><h4>How to make informed decisions about which types of UI elements to choose when designing a websites.</h4></li>
+          <li><h4>Various components of user interface design for the web</h4></li>
+          <li><h4>Sketching and designing my own mobile app prototype for an improved MTA ticket machine.</h4></li>
+          <li><h4>Effective layouts for site pages, as well as best practice options for navigation, search, registration/account management, shopping carts and web copy style.</h4></li>
+        </ul>
+
+        <h4 class="floatLeft colorTeal">Software Engineering, Binghamton University</h4>
+        <h4 class="floatRight"><strong>Fall 2014</strong></h4>
+        <h4 class="notInline" id="GADescription">Learned project management skills such as risk management, estimation, scheduling, and SQA. Learned software development skills such as user flows, process model selection(largely focused on agile), domain analysis, requirement gathering, analysis and design modeling, user interface design, architectural and detailed design, documentation, testing strategies/methods, test plan generation, and reuse. Learned software engineering practices applied to the life cycle of large software applications and engineering projects.</h4>
+
+        <a href="assets/Resume7-18-16.pdf" target="_blank">
+          <div class="linkButton">
+            <span class="buttonText"><strong>Resume as PDF</strong></span>
+          </div>
+        </a>
+      </div>
+
+
+
+
+
+
       
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
