Updating resume file, fixing resume title to upper case

--- a/resume.html
+++ b/resume.html
@@ -48,11 +48,11 @@
       <div class="resumeContent">
         <hr>
         <div id="objective">
-          <h4><span class="colorTeal">OBJECTIVE</span>: Meld my existing knowledge of software development with my passion for design and find a challenging and exciting user experience design opportunity with a dynamic, forward thinking, and user focused company.</h4>
+          <h4><span class="colorTeal">Objective</span>: Meld my existing knowledge of software development with my passion for design and find a challenging and exciting user experience design opportunity with a dynamic, forward thinking, and user focused company.</h4>
         </div>
 
         <div id="technicalCompetencies">
-          <h4><span class="colorTeal">TECHNICAL COMPETENCIES</span>: Sketch, Balsamiq, Adobe illustrator, Adobe photoshop, HTML, CSS, Javascript, C++, C#, WPF, Ruby on Rails, Ruby, Java, C, COBOL, Perforce, Git</h4>
+          <h4><span class="colorTeal">Technical Competencies</span>: Sketch, Balsamiq, Adobe illustrator, Adobe photoshop, HTML, CSS, Javascript, C++, C#, WPF, Ruby on Rails, Ruby, Java, C, COBOL, Perforce, Git</h4>
         </div>
 
         <div class="sectionHeader">
@@ -68,7 +68,7 @@
         </div>
 
         <div id="amazon">
-          <h4 class="floatLeft colorTeal">Software development engineer intern at Amazon</h4>
+          <h4 class="floatLeft colorTeal">Software Development Engineer Intern at Amazon</h4>
           <h4 class="floatRight"><strong>Summer 2014</strong></h4>
           <h4 class="notInline">Refactored an old Ruby on Rails site. Created methods to perform operations that were previously done manually. These methods read through a json file and used the data found to generate html forms dynamically. Used metaprogramming to create a class and attribute accessors using class eval. Created validation and unit tests for the methods I wrote. Faced the challenges of learning new languages (Ruby on Rails, Ruby, and Html) and new skills (web development, internal amazon technology, Git, working with a vast a foreign code base) in a short period of time but was able to come away with a successful completed project from front to backend. I also was able to experience working with teammates by engaging in code reviews, writing unit tests, refactoring my code, and providing status through standups and other team meetings.</h4>
         </div>
@@ -118,7 +118,7 @@
         <h4 class="floatRight"><strong>Fall 2014</strong></h4>
         <h4 class="notInline" id="GADescription">Learned project management skills such as risk management, estimation, scheduling, and SQA. Learned software development skills such as user flows, process model selection(largely focused on agile), domain analysis, requirement gathering, analysis and design modeling, user interface design, architectural and detailed design, documentation, testing strategies/methods, test plan generation, and reuse. Learned software engineering practices applied to the life cycle of large software applications and engineering projects.</h4>
 
-        <a href="assets/Resume7-18-16.pdf" target="_blank">
+        <a href="assets/Resume7-19-16.pdf" target="_blank">
           <div class="linkButton">
             <span class="buttonText"><strong>Resume as PDF</strong></span>
           </div>
