--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-    <div id="bannerPhotoDiv"><img src="img/notMyEyes.png"/></div>
+    <div id="bannerPhotoDiv"><img src="img/nameOnGray.jpg"/></div>
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
@@ -34,7 +34,11 @@
         </div><!--/.container-fluid -->
       </nav>
 
-      
+       <a href="assets/portfolioPiece7-23.pdf" target="_blank">
+          <div class="linkButton">
+            <span class="buttonText"><strong>Portfolio Piece as PDF</strong></span>
+          </div>
+        </a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
