updating index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-    <div id="bannerPhotoDiv"><img src="img/nameOnGray.jpg"/></div>
+    <div id="bannerPhotoDiv"><img src="img/NameOnGray.jpg"></div>
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
@@ -34,18 +34,16 @@
         </div><!--/.container-fluid -->
       </nav>
 
-      <section>
-        <div id="one">
-          <img id="profilePic" src="img/ProfilePic.png">
+     <section>
+        
+        <div id="homeContent">
+          <h1>Software developer turned User Experience designer</h1>
+          <h2>Located in Williamsburg, Brooklyn</h2>
         </div>
-        <div id="two">
-          <h1>Hi I'm Kelsey Skaarva</h1>
-          <h2 id="headline">Software developer turned UX designer</h2>
-          <h2 id="funHeader">Fun</h2>
-          <h2>Intelligent</h2>
-          <h2>Creative</h2>
-        </div>
-      </section>
+        <div> 
+          <img id="skyline"/>
+       </div>
+     </section> 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
