Changes from work 5-3-17

--- a/resume.html
+++ b/resume.html
@@ -37,11 +37,11 @@
       <center><h1>Kelsey Skaarva</h1></center>
       <div id="contactInfo">
         <center>
-          <h4>Brooklyn, NY 11211</h4>
+          <img class="starIcon starToggle" src="img/starIcon.png">
+          <h4 id="location">Brooklyn, NY 11211</h4>
           <img class="starIcon" src="img/starIcon.png">
-          <h4>(917)-545-0979</h4> 
-          <img class="starIcon secondStar" src="img/starIcon.png">
-          <h4>KJS@KelseySkaarva.com</h4>
+          <h4 id="email">KJS@KelseySkaarva.com</h4>
+          <img class="starIcon starToggle" src="img/starIcon.png">
         </center>
       </div>
 
@@ -61,9 +61,15 @@
           <hr>
         </div>
 
+        <div id="citi2">
+          <h4 class="floatLeft colorTeal">Front End Developer at Citi</h4>
+          <h4 class="floatRight"><strong>September 2016 - Present</strong></h4>
+          <h4 class="notInline">Worked with various teams across Citi to improve the front end experiences of their applications. Worked on bug fixes and feature adds in existing user interfaces as well as created entirely new user interfaces. Observed users interacting with applications to see what pain points they encountered. Worked with users, UX designers, business stake holders, and other UI developers to come up with and implement meaningful solutions to observed issues.</h4>
+        </div>
+
         <div id="citi">
           <h4 class="floatLeft colorTeal">Technical Analyst at Citi</h4>
-          <h4 class="floatRight"><strong>June 2015 - Present</strong></h4>
+          <h4 class="floatRight"><strong>June 2015 - September 2016</strong></h4>
           <h4 class="notInline">Worked on bug fixes and new feature adds for a C#/WPF application that displayed and manipulated trading data. Worked on a proof of concept to test the viability of html5 as a front end for my teams WPF application. Created a program to time various actions that we needed to happen quickly with a large data set. Learned more about design during work on a process improvement project. Got experience wire framing in Balsamiq, creating user personas, and performing usability tests. Planned several office events for networking and team building.</h4>
         </div>
 
@@ -88,7 +94,7 @@
         
         <div id="GA">
           <h4 class="floatLeft colorTeal" id="GATitle">General Assembly</h4>
-          <h4 class="floatRight"><strong>December 2015 - May 2015</strong></h4>
+          <h4 class="floatRight"><strong>December 2015 - May 2016</strong></h4>
           <h4 class="notInline">Global educational company focusing on the most relevant and in-demand skills across data, design, business and technology.</h4>
         </div>
 
@@ -118,7 +124,7 @@
         <h4 class="floatRight"><strong>Fall 2014</strong></h4>
         <h4 class="notInline" id="GADescription">Learned project management skills such as risk management, estimation, scheduling, and SQA. Learned software development skills such as user flows, process model selection(largely focused on agile), domain analysis, requirement gathering, analysis and design modeling, user interface design, architectural and detailed design, documentation, testing strategies/methods, test plan generation, and reuse. Learned software engineering practices applied to the life cycle of large software applications and engineering projects.</h4>
 
-        <a href="assets/Resume7-19-16.pdf" target="_blank">
+        <a href="assets/Resume4-17-17.pdf" target="_blank">
           <div class="linkButton">
             <span class="buttonText"><strong>Resume as PDF</strong></span>
           </div>
