--- a/contactMe.html
+++ b/contactMe.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-    <div id="bannerPhotoDiv"><img src="img/nameOnGray.jpg"/></div>
+    <div id="bannerPhotoDiv"><img src="img/NameOnGray.jpg"></div>
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
