Added century gothic font files, changed index.html look, changed nav bar look

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,12 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+      <a href="portfolioViews/generalAssembly.html" target="_blank">
+          <div class="portfolioPieceButton">
+            <span class="ppButtonText"><strong>General Assembly</strong></span>
+          </div>
+      </a>
+
 
        <a href="assets/portfolioPiece7-23.pdf" target="_blank">
           <div class="linkButton">
