--- a/index.html
+++ b/index.html
@@ -7,43 +7,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-
-    <div id="bannerPhotoDiv"><img src="img/NameOnGray.jpg"></div>
-    <!--collapsible nav-->
-     <!-- Static navbar -->
-      <nav class="navbar navbar-default ">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Home</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="resume.html">Resume</a></li>
-              <li><a href="hobbies.html">Hobbies</a></li>
-              <li><a href="contactMe.html">Contact Me</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-
-     <section>
-        
-        <div id="homeContent">
-          <h1>Software developer turned User Experience designer</h1>
-          <h2>Located in Williamsburg, Brooklyn</h2>
+    <nav class="navbar navbar-default ">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Home</a>
         </div>
-        <div> 
-          <img id="skyline"/>
-       </div>
-     </section> 
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="contactMe.html">Contact Me</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div><!--/.container-fluid -->
+    </nav>
+
+    <div id="homeContent">
+      <h1>
+        <div class="col-sm-4" "kelsey">
+          <span style='color: #e6ff7a'>K</span>
+          <span style='color: #fff999'>e</span>
+          <span style='color: #bcffcf'>l</span>
+          <span style='color: #ff8266'>s</span>
+          <span style='color: #aafff6'>e</span>
+          <span style='color: #c5bfff'>y</span>
+        </div>
+        <div class="col-sm-8">
+          <!-- <span style='color: transparent'>!</span> -->
+          <span style='color: #ff7295'>S</span>
+          <span style='color: #e6ff7a'>k</span>
+          <span style='color: #fff999'>a</span>
+          <span style='color: #bcffcf'>a</span>
+          <span style='color: #ff8266'>r</span>
+          <span style='color: #aafff6'>v</span>
+          <span style='color: #c5bfff'>a</span>
+        </div>
+      </h1>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
