-Got name to stack when page gets too small git status -Rearranged colors so they look good stacked

--- a/index.html
+++ b/index.html
@@ -30,28 +30,31 @@
       </div><!--/.container-fluid -->
     </nav>
 
-    <div id="homeContent">
-      <h1>
-        <div class="col-sm-4" "kelsey">
-          <span style='color: #e6ff7a'>K</span>
-          <span style='color: #fff999'>e</span>
-          <span style='color: #bcffcf'>l</span>
-          <span style='color: #ff8266'>s</span>
-          <span style='color: #aafff6'>e</span>
-          <span style='color: #c5bfff'>y</span>
+    <div class="container homeContent">
+      <div class="row">
+        <div class="col-lg-5">
+          <h1>
+            <span style='color: #e6ff7a'>K</span>
+            <span style='color: #fff999'>e</span>
+            <span style='color: #aafff6'>l</span>
+            <span style='color: #ff8266'>s</span>
+            <span style='color: #bcffcf'>e</span>
+            <span style='color: #c5bfff'>y</span>
+          </h1>
         </div>
-        <div class="col-sm-8">
-          <!-- <span style='color: transparent'>!</span> -->
-          <span style='color: #ff7295'>S</span>
-          <span style='color: #e6ff7a'>k</span>
-          <span style='color: #fff999'>a</span>
-          <span style='color: #bcffcf'>a</span>
-          <span style='color: #ff8266'>r</span>
-          <span style='color: #aafff6'>v</span>
-          <span style='color: #c5bfff'>a</span>
-        </div>
-      </h1>
-    </div>
+        <div class="col-lg-7">
+          <h1>
+            <span style='color: #ff7295'>S</span>
+            <span style='color: #bcffcf'>k</span>
+            <span style='color: #ff8266'>a</span>
+            <span style='color: #c5bfff'>a</span>
+            <span style='color: #fff999'>r</span>
+            <span style='color: #aafff6'>v</span>
+            <span style='color: #e6ff7a'>a</span>
+          </h1>
+        </div>  
+      </div>  
+    </div>  
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
