changed color scheme, added portfolio page content, fixed resume responsiveness

--- a/contactMe.html
+++ b/contactMe.html
@@ -7,12 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-
-    <div id="bannerPhotoDiv"><img src="img/NameOnGray.jpg"></div>
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
         <div class="container-fluid">
+          <a class="navbar-brand hidden-xs navbar-right" href="index.html">
+            <div class="nameBrand">
+              <span class="kelseyBrand">
+                <span class="colorLime">K</span>
+                <span class="colorPurple">e</span>
+                <span class="colorBlue">l</span>
+                <span class="colorLime">s</span>
+                <span class="colorTeal">e</span>
+                <span class="colorYellow">y</span>
+              </span>
+              <span class="skaarvaBrand">
+                <span class="colorLime">S</span>
+                <span class="colorBlue">k</span>
+                <span class="colorYellow">a</span>
+                <span class="colorPurple">a</span>
+                <span class="colorTeal">r</span>
+                <span class="colorLime">v</span>
+                <span class="colorBlue">a</span>
+              </span>
+          </div>
+        </a>
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
