--- a/hobbies.html
+++ b/hobbies.html
@@ -8,11 +8,31 @@
 	</head>
 	<body>
 
-    <div id="bannerPhotoDiv"><img src="img/NameOnGray.jpg"></div>
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
         <div class="container-fluid">
+          <a class="navbar-brand hidden-xs navbar-right" href="index.html">
+            <div class="nameBrand">
+              <span class="kelseyBrand">
+                <span class="colorLime">K</span>
+                <span class="colorPurple">e</span>
+                <span class="colorBlue">l</span>
+                <span class="colorLime">s</span>
+                <span class="colorTeal">e</span>
+                <span class="colorYellow">y</span>
+              </span>
+              <span class="skaarvaBrand">
+                <span class="colorLime">S</span>
+                <span class="colorBlue">k</span>
+                <span class="colorYellow">a</span>
+                <span class="colorPurple">a</span>
+                <span class="colorTeal">r</span>
+                <span class="colorLime">v</span>
+                <span class="colorBlue">a</span>
+              </span>
+          </div>
+        </a>
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -33,6 +53,29 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+
+      <div class="container homeContent">
+      <div class="row">
+        <div class="col-lg-6 kelseyHome ">
+          <h1>
+            <span class="colorLime">C</span>
+            <span class="colorYellow">o</span>
+            <span class="colorBlue">m</span>
+            <span class="colorOrange">i</span>
+            <span class="colorTeal">n</span>
+            <span class="colorPurple">g</span>
+          </h1>
+        </div>
+        <div class="col-lg-6 skaarvaHome">
+          <h1>
+            <span class="colorPink">S</span>
+            <span class="colorTeal">o</span>
+            <span class="colorLime">o</span>
+            <span class="colorPurple">n</span>
+        </div>  
+      </div>  
+    </div>  
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
