--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
 
     <div class="container homeContent">
       <div class="row">
-        <div class="col-lg-5">
+        <div class="col-lg-6 kelseyHome">
           <h1>
-            <span style='color: #e6ff7a'>K</span>
-            <span style='color: #fff999'>e</span>
-            <span style='color: #aafff6'>l</span>
-            <span style='color: #ff8266'>s</span>
-            <span style='color: #bcffcf'>e</span>
-            <span style='color: #c5bfff'>y</span>
+            <span class="colorLime">K</span>
+            <span class="colorYellow">e</span>
+            <span class="colorBlue">l</span>
+            <span class="colorOrange">s</span>
+            <span class="colorTeal">e</span>
+            <span class="colorPurple">y</span>
           </h1>
         </div>
-        <div class="col-lg-7">
+        <div class="col-lg-6 skaarvaHome">
           <h1>
-            <span style='color: #ff7295'>S</span>
-            <span style='color: #bcffcf'>k</span>
-            <span style='color: #ff8266'>a</span>
-            <span style='color: #c5bfff'>a</span>
-            <span style='color: #fff999'>r</span>
-            <span style='color: #aafff6'>v</span>
-            <span style='color: #e6ff7a'>a</span>
+            <span class="colorPink">S</span>
+            <span class="colorTeal">k</span>
+            <span class="colorOrange">a</span>
+            <span class="colorPurple">a</span>
+            <span class="colorYellow">r</span>
+            <span class="colorBlue">v</span>
+            <span class="colorLime">a</span>
           </h1>
         </div>  
       </div>  
