--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,32 @@
 	</head>
 	<body>
 
-    <div id="bannerPhotoDiv"><img src="img/NameOnGray.jpg"></div>
+   
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
         <div class="container-fluid">
+          <a class="navbar-brand hidden-xs navbar-right" href="index.html">
+            <div class="nameBrand">
+              <span class="kelseyBrand">
+                <span class="colorLime">K</span>
+                <span class="colorPurple">e</span>
+                <span class="colorBlue">l</span>
+                <span class="colorLime">s</span>
+                <span class="colorTeal">e</span>
+                <span class="colorYellow">y</span>
+              </span>
+              <span class="skaarvaBrand">
+                <span class="colorLime">S</span>
+                <span class="colorBlue">k</span>
+                <span class="colorYellow">a</span>
+                <span class="colorPurple">a</span>
+                <span class="colorTeal">r</span>
+                <span class="colorLime">v</span>
+                <span class="colorBlue">a</span>
+              </span>
+          </div>
+        </a>
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -33,19 +54,31 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
-      <a href="portfolioViews/generalAssembly.html" target="_blank">
-          <div class="portfolioPieceButton">
-            <span class="ppButtonText"><strong>General Assembly</strong></span>
-          </div>
-      </a>
 
-
-       <a href="assets/portfolioPiece7-23.pdf" target="_blank">
-          <div class="linkButton">
-            <span class="buttonText"><strong>Portfolio Piece as PDF</strong></span>
-          </div>
-        </a>
-
+      <center>  
+        <div class="container portfolioContent">
+          <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
+              <a class="portfolioPieceLink" href="portfolioViews/pogo.html">
+                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
+                <h1 class="colorPink">Pogo</h1>
+              </a>          
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">     
+              <a class="portfolioPieceLink" href="portfolioViews/CMP.html">
+                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
+                <h1 class="colorPink">Citi Marketplace</h1>
+              </a>        
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">  
+              <a  class="portfolioPieceLink" href="portfolioViews/velocity.html">
+                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/VelocityCircle.png"/>
+                <h1 class="colorPink">Velocity</h1>
+              </a>           
+            </div>
+          </div>  
+        </div>  
+      </center>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
