changes from friday at work

--- a/contactMe.html
+++ b/contactMe.html
@@ -52,6 +52,41 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+      <div class="nameContact">
+        <span class="kelseyContact">
+          <h1>
+            <span class="colorPink">K</span>
+            <span class="colorLime">e</span>
+            <span class="colorBlue">l</span>
+            <span class="colorOrange">s</span>
+            <span class="colorTeal">e</span>
+            <span class="colorPurple">y</span>
+          </h1>
+        </span>
+        <span class="skaarvaContact">
+          <h1>
+            <span class="colorPink">S</span>
+            <span class="colorTeal">k</span>
+            <span class="colorOrange">a</span>
+            <span class="colorPurple">a</span>
+            <span class="colorPink">r</span>
+            <span class="colorBlue">v</span>
+            <span class="colorLime">a</span>
+          </h1>
+        </span>  
+      </div>
+      <div class="firstInfoBlock">
+        <h3 class="colorPink contactLabel">Cell Phone: </h3>
+        <h3 class="info colorPurple">917-545-0979</h3>
+      </div>
+      <div class="infoBlock">
+        <h3 class="colorPink contactLabel">Email: </h3>
+        <h3 class="info colorPurple">KJS@KelseySkaarva.com</h3>
+      </div>
+      <div class="infoBlock">
+        <h3 class="colorPink contactLabel">Location: </h3>
+        <h3 class="info colorPurple">Brooklyn, NY</h3>
+      </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
