--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       </div><!--/.container-fluid -->
     </nav>
 
-    <div class="container homeContent">
+    <div class="container largeColorfulText">
       <div class="row">
-        <div class="col-lg-6 kelseyHome">
+        <div class="col-lg-5 kelseyHome">
           <h1>
             <span class="colorLime">K</span>
             <span class="colorYellow">e</span>
@@ -42,7 +42,7 @@
             <span class="colorPurple">y</span>
           </h1>
         </div>
-        <div class="col-lg-6 skaarvaHome">
+        <div class="col-lg-7 skaarvaHome">
           <h1>
             <span class="colorPink">S</span>
             <span class="colorTeal">k</span>
