--- a/portfolio.html
+++ b/portfolio.html
@@ -59,22 +59,35 @@
         <div class="container portfolioContent">
           <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <a class="portfolioPieceLink" href="portfolioViews/pogo.html">
+              <!--desktop pogo presentation display-->
+              <a class="portfolioPieceLink desktop" href="portfolioViews/pogo.html">
                 <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
                 <h1 class="colorPink">Pogo</h1>
-              </a>          
+              </a>
+              <!--mobile pogo presentation display-->
+              <a class="portfolioPieceLink mobile" href="assets/portfolioPiece7-23.pdf" target="_blank">
+                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
+                <h1 class="colorPink">Pogo</h1>
+              </a>                    
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">     
-              <a class="portfolioPieceLink" href="portfolioViews/CMP.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">   
+            <!--desktop CMP presentation display-->  
+              <a class="portfolioPieceLink desktop" href="portfolioViews/CMP.html">
                 <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
                 <h1 class="colorPink">Citi Marketplace</h1>
-              </a>        
+              </a>  
+              <!--mobile CMP presentation display-->
+              <a class="portfolioPieceLink mobile" href="assets/MarketplaceEmployeeprofiles.pdf" target="_blank">
+                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
+                <h1 class="colorPink">Citi Marketplace</h1>
+              </a>       
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">  
+              <!--desktop and mobile velocity project display-->
               <a  class="portfolioPieceLink" href="portfolioViews/velocity.html">
                 <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/VelocityCircle.png"/>
                 <h1 class="colorPink">Velocity</h1>
-              </a>           
+              </a>       
             </div>
           </div>  
         </div>  
