--- a/portfolioViews/velocity.html
+++ b/portfolioViews/velocity.html
@@ -53,25 +53,22 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
-      <h1 class="colorPink portfolioPieceLabel">Pogo</h1>
-     <!--  <div class="pdfContainer">
-        <iframe src="assets/portfolioPiece7-23.pdf" class="pdf"/>
-      </div> 
- -->
-      <div class="content">
-        <div class="embed-container">
-          <iframe src="../assets/portfolioPiece7-23.pdf" frameborder="0"></iframe>
-        </div>
-      </div>
-
-      <a class="link" href="../assets/portfolioPiece7-23.pdf" target="_blank" >
-        <div class="linkButton">
-          <span class="buttonText"><strong>Pogo as PDF</strong></span>
-        </div>
-      </a>
-
- </div>
-
+      <h1 class="colorPink portfolioPieceLabel">Velocity</h1>
+        <h1 class="colorPurple beforeAfter">Before</h1>
+        <h3 class="colorPurple portfolioInfo">Given the below design image</h3>
+        <img class="velocityBefore" src="../img/ProximityLevels1.png"/>
+        <h1 class="colorPurple beforeAfter">After</h1>
+        <h3 class="colorPurple portfolioInfo">Implimented design in WPF</h3>
+        <img class="velocityAfter" src="../img/ImplimentedPrefScreen.png"/>
+        <span class="changes">
+          <h3 class="colorPurple">Changes in implimented design</h3>
+          <ul id="changeList">
+            <li class="colorPink"><h4 class="colorPurple">Increased screen width to make room for numeric values that would not fit in the Banding grid otherwise</h4></li>
+            <li class="colorPink"><h4 class="colorPurple">Added red borders to Banding grid cells and Volatile Market Multiplies text boxes to show incorrect input</h4></li>
+            <li class="colorPink"><h4 class="colorPurple">Added Save button so user doesn't have to X out in order to save changes which may be disconcerning</h4></li>
+            <li class="colorPink"><h4 class="colorPurple">Added extra room to the right of the banding grid to allow space for a scroll bar to appear when more than 4 rows are added</h4></li>
+          </ul>
+        </span>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
