--- a/hobbies.html
+++ b/hobbies.html
@@ -54,9 +54,9 @@
         </div><!--/.container-fluid -->
       </nav>
 
-      <div class="container homeContent">
+      <div class="container largeColorfulText">
       <div class="row">
-        <div class="col-lg-6 kelseyHome ">
+        <div class="col-lg-7 coming ">
           <h1>
             <span class="colorLime">C</span>
             <span class="colorYellow">o</span>
@@ -66,7 +66,7 @@
             <span class="colorPurple">g</span>
           </h1>
         </div>
-        <div class="col-lg-6 skaarvaHome">
+        <div class="col-lg-5 soon">
           <h1>
             <span class="colorPink">S</span>
             <span class="colorTeal">o</span>
