--- a/portfolioViews/pogo.html
+++ b/portfolioViews/pogo.html
@@ -55,13 +55,11 @@
       </nav>
       <h1 class="colorPink portfolioPieceLabel">Pogo</h1>
       <center>
-          <embed src="../assets/portfolioPiece7-23.pdf" class="pdfDisplayLarge"/>
-          <embed src="../assets/portfolioPiece7-23.pdf" class="pdfDisplayMedium"/>
-          <embed src="../assets/portfolioPiece7-23.pdf" class="pdfDisplaySmall"/>
+          <embed class="pdfViewer" src="../assets/portfolioPiece7-23.pdf" ></embed>
       </center>
 
 
-      <a class="link" href="../assets/portfolioPiece7-23.pdf" target="_blank" >
+      <a class="link" href="../assets/portfolioPiece7-23.pdf" target="_self" >
         <div class="linkButton">
           <span class="buttonText"><strong>Pogo as PDF</strong></span>
         </div>
