Adding Side Nav for interiorDesign tab, added images for interior design sub categories, added custom.js for side nav, updated resume, other changes

--- a/coming_soon.html
+++ b/coming_soon.html
@@ -8,7 +8,6 @@
 	</head>
 	<body class="bodyText">
 
-   
     <!--collapsible nav-->
      <!-- Static navbar -->
       <nav class="navbar navbar-default ">
@@ -41,57 +40,43 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Portfolio</a>
+            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">Hobbies</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="resume.html">Resume</a></li>
-              <li><a href="hobbies.html">Hobbies</a></li>
+              <li class="active"><a href="hobbies.html">Hobbies</a></li>
               <li><a href="contactMe.html">Contact Me</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
 
-      <center>  
-        <div class="container portfolioContent">
-          <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">
-              <!--desktop pogo presentation display-->
-              <a class="portfolioPieceLink desktop" href="portfolioViews/pogo.html">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
-                <h1 class="colorPink">Pogo</h1>
-              </a>
-              <!--mobile pogo presentation display-->
-              <a class="portfolioPieceLink mobile" href="assets/portfolioPiece7-23.pdf" target="_blank">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/PogoCircle.png"/>
-                <h1 class="colorPink">Pogo</h1>
-              </a>                    
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">   
-            <!--desktop CMP presentation display-->  
-              <a class="portfolioPieceLink desktop" href="portfolioViews/CMP.html">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
-                <h1 class="colorPink">Citi Marketplace</h1>
-              </a>  
-              <!--mobile CMP presentation display-->
-              <a class="portfolioPieceLink mobile" href="assets/MarketplaceEmployeeprofiles.pdf" target="_blank">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/CMPCircle.png"/>
-                <h1 class="colorPink">Citi Marketplace</h1>
-              </a>       
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 portfolioPiece">  
-              <!--desktop and mobile velocity project display-->
-              <a  class="portfolioPieceLink" href="portfolioViews/velocity.html">
-                <img class="portfolioPieceIcon" src="img/PortfolioPieceIcons/VelocityCircle.png"/>
-                <h1 class="colorPink">Velocity</h1>
-              </a>       
-            </div>
-          </div>  
+      <div class="container largeColorfulText">
+      <div class="row">
+        <div class="col-lg-7 coming ">
+          <h1>
+            <span class="colorLime">C</span>
+            <span class="colorYellow">o</span>
+            <span class="colorBlue">m</span>
+            <span class="colorOrange">i</span>
+            <span class="colorTeal">n</span>
+            <span class="colorPurple">g</span>
+          </h1>
+        </div>
+        <div class="col-lg-5 soon">
+          <h1>
+            <span class="colorPink">S</span>
+            <span class="colorTeal">o</span>
+            <span class="colorLime">o</span>
+            <span class="colorPurple">n</span>
         </div>  
-      </center>
+      </div>  
+    </div>  
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!--popper.js-->
