Adding rainbowStrobe in index page

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
       <div class="row">
         <div class="col-lg-5 kelseyHome">
           <h1>
-            <span class="colorLime">K</span>
-            <span class="colorYellow">e</span>
-            <span class="colorBlue">l</span>
-            <span class="colorOrange">s</span>
-            <span class="colorTeal">e</span>
-            <span class="colorPurple">y</span>
+            <span class="colorLime" id="letterK">K</span>
+            <span class="colorYellow" id="letterE">e</span>
+            <span class="colorBlue" id="letterL">l</span>
+            <span class="colorOrange" id="letterS">s</span>
+            <span class="colorTeal" id="secondE">e</span>
+            <span class="colorPurple" id="letterY">y</span>
           </h1>
         </div>
         <div class="col-lg-7 skaarvaHome">
           <h1>
-            <span class="colorPink">S</span>
-            <span class="colorTeal">k</span>
-            <span class="colorOrange">a</span>
-            <span class="colorPurple">a</span>
-            <span class="colorYellow">r</span>
-            <span class="colorBlue">v</span>
-            <span class="colorLime">a</span>
+            <span class="colorPink" id="secondS">S</span>
+            <span class="colorTeal" id="secondK">k</span>
+            <span class="colorOrange" id="letterA">a</span>
+            <span class="colorPurple" id="secondA">a</span>
+            <span class="colorYellow" id="letterR">r</span>
+            <span class="colorBlue" id="letterV">v</span>
+            <span class="colorLime" id="thirdA">a</span>
           </h1>
         </div>  
       </div>  
@@ -62,5 +62,7 @@
     <script src="https://unpkg.com/popper.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <script src="js/nameRainbowStrobe.js"></script>
 	</body>
 </html>
